Ingress/gateway-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-server-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  tls:
    - hosts:
        - formduo.xyz
      secretName: letsecret
  ingressClassName: nginx
  rules:
    - host: formduo.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-front
                port:
                  number: 3000
