Ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-server-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - www.formduo.xyz
      secretName: wwwsecret
  ingressClassName: nginx
  rules:
    - host: www.formduo.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-front
                port:
                  number: 3000
